--- a/Final project Transfer/app/src/main/AndroidManifest.xml
+++ b/Final project Transfer/app/src/main/AndroidManifest.xml
@@ -36,8 +36,8 @@
         </activity>
         <activity
             android:name=".IHome"
-            android:label="@string/app_name"
-            android:icon="@drawable/tourist">
+            android:icon="@drawable/tourist"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -79,6 +79,26 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".IMobileTouristGuide"
+            android:label="@string/title_activity_imobile_tourist_guide" >
+        </activity>
+        <activity
+            android:name=".ITouristDisplay"
+            android:label="@string/title_activity_itourist_display" >
+        </activity>
+        <activity
+            android:name=".Experience.Exp_dashboard"
+            android:label="@string/title_activity_exp_dashboard" >
+        </activity>
+        <activity
+            android:name=".Tracker"
+            android:label="@string/title_activity_tracker" >
+        </activity>
+        <activity
+            android:name=".Object_Tracking"
+            android:label="@string/title_activity_object__tracking" >
         </activity>
     </application>
 
